<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.corycharlton.bittrexapi.demo.activities.AuthenticationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:paddingTop="?attr/dialogPreferredPadding"
        android:paddingBottom="?attr/dialogPreferredPadding"
        >

        <EditText
            android:id="@+id/key_edittext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/enter_key"
            android:lines="1"
            android:maxLines="1"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_vertical_margin"
            />

        <EditText
            android:id="@+id/secret_edittext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/enter_secret"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:gravity="bottom"
        style="?attr/buttonBarStyle">

        <Space
            android:id="@+id/spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/cancel"
            style="?attr/buttonBarNegativeButtonStyle"
            />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/ok"
            style="?attr/buttonBarPositiveButtonStyle"
            />

    </LinearLayout>

</LinearLayout>
